syntax = "proto3";

package mpb;

option go_package = "./mpb";

// Account
message DBAccountInfo { // key:acc:%s
    string account = 1;
    uint64 user_id = 2;
    string device_id = 3;
    string device = 4;
    string os = 5;
    string region = 6;
    string password = 7;
    uint32 is_verified = 8;
    bool guest = 9;
    int64 register_time = 10;
    string tel = 11;
    string email = 12;
    string platform = 13;
    string wallet_addr = 14;
    bytes public_key = 15;
    string nickname = 16;
    string icon = 17;
    uint64 tg_id = 18;
    string language_code = 19;
}

message DBWalletAcc {
    string account = 1;
    uint64 user_id = 2;
}

message DBTokenInfo { // key:token:%s
    string account = 1;
    string device = 2;
    string device_id = 3;
}

message DBLoginToken {
    uint64 tg_id = 1;
    string first_name = 2;
    string last_name = 3;
    string language_code = 4;
}